test/sema/typeck/operator/binary-add-bool.out
error: binary operator `+` can not handle expression of type `Bool + Bool`
--> binary-add-bool.dora:1:17
 | fn f(a: Bool) { a+a; }
                   ~~~
 | 
1 error found.
