test/sema/typeck/operator/binary-add-bool.dora
fn f(a: Bool) { a+a; }
